--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
 	"name" : "notetoself",
 	"version" : "1.0.0",
 	"dependencies" : {
-		"restify": "2.0.4",
-		"mongoose": "3.5.4",
-		"lodash": "1.0.0"
+		"restify": "2.0.x",
+		"mongoose": "3.5.x",
+		"lodash": "1.x",
+		"everyauth": "0.x",
+		"connect": "2.7.x",
+		"bcrypt": "0.x",
+		"express": "3.x"		
 	} 
 }
