--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-	"name" : "notetoself",
-	"version" : "1.0.0",
-	"dependencies" : {
-		"restify": "2.0.x",
-		"mongoose": "3.5.x",
-		"lodash": "1.x",
-		"everyauth": "0.x",
-		"connect": "2.7.x",
-		"bcrypt": "0.x",
-		"express": "3.x"		
-	} 
+  "name": "application-name",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app"
+  },
+  "dependencies": {
+    "express": "3.0.6",
+    "jade": "*",
+    "sass": "*"
+  }
 }
