--- a/package.json
+++ b/package.json
@@ -8,6 +8,19 @@
   "dependencies": {
     "express": "3.0.6",
     "jade": "*",
-    "sass": "*"
+    "everyauth": "git://github.com/hermanschaaf/everyauth-express3.git",
+    "oauth2-provider": "1.x",
+    "mongoose": "3.x",
+    "lodash": "1.x",
+    "bcrypt": "*",
+    "mongoose-types": "*",
+    "mongoose-auth": "*"
+  },
+  "devDependencies": {
+    "sass": "*",
+    "mocha": "*",
+    "chai": "*"
   }
 }
+
+    
