--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.6",
+    "express": "3.*",
     "jade": "*",
-    "everyauth": "git://github.com/hermanschaaf/everyauth-express3.git",
+    "passport": "*",
+    "passport-twitter": "*",
     "oauth2-provider": "1.x",
     "mongoose": "3.x",
     "lodash": "1.x",
     "bcrypt": "*",
-    "mongoose-types": "*",
-    "mongoose-auth": "*"
+    "mongoose-types": "*"
   },
   "devDependencies": {
     "sass": "*",
     "mocha": "*",
-    "chai": "*"
+    "chai": "*",
+    "cucumber": "*"
   }
 }
 
